menambahkan resep.html

--- a/resep.html
+++ b/resep.html
@@ -33,41 +33,45 @@
         </div>     
     </div>
 </nav>
-
-<section class="container py-5">
-  <h2 class="display-5 text-center fw-bold">Resep Masakan Lezat</h2>
-  <p class="lead text-center">Temukan berbagai resep makanan dan minuman yang menggugah selera!</p>
-
-  <div class="row row-cols-1 row-cols-md-2 g-4">
-    <div class="col">
-      <div class="card h-100">
-        <img src="/gambar/sate madura.jpeg" class="card-img-top" alt="Recipe image">
+<section class="container-fluid hero d-flex flex-column justify-content-center align-items-center py-5 bg-light">
+  <h2 class="display-4 text-center fw-bold"> Silahkan pilih resep yang kamu mau</h2>
+  </section>
+<section style="padding: 20px;">
+  <div class="row" >
+    <div class="col-sm-4">
+      <div class="card" style="margin-top: 100px;">
+        <img src="/gambar/sate madura.jpeg" class="card-img-top" alt="Sate Madura" style="height: 350px;">
         <div class="card-body">
           <h5 class="card-title">Sate Madura</h5>
-          <p class="card-text">Sate madura adalah kuliner sate khas Indonesia yang terkenal 
-            dengan bumbunya yang terbuat dari kacang tanah dan cita rasanya yang gurih dan sedikit manis.</p>
-          <a href="resepedia.html" class="btn btn-primary" >Lihat Detail</a>
+          <a href="resepedia.html" class="btn btn-primary">Detail Resep</a>
         </div>
       </div>
     </div>
 
-    <div class="col">
-      <div class="card h-100">
-        <img src="/gambar/nasigoreng.jpg" class="card-img-top" alt="Recipe image">
+    <div class="col-sm-4">
+      <div class="card " style="margin-top: 100px;">
+        <img src="/gambar/rendang.jpg" class="card-img-top" alt="Nasi Goreng" style="height: 350px; ;">
         <div class="card-body">
-          <h5 class="card-title"> Nasi Goreng</h5>
-          <p class="card-text">Nasi goreng adalah salah satu hidangan populer di Indonesia yang terbuat dari nasi putih yang digoreng dengan berbagai bumbu dan bahan lainnya. 
-            Hidangan ini merupakan makanan yang mudah dibuat dan disukai oleh berbagai kalangan. </p>
-          <a href="resepedia.html" class="btn btn-primary" >Lihat Detail</a>
+          <h5 class="card-title">Nasi Goreng</h5>
+          <a href="resepedia.html" class="btn btn-primary">Detail Resep</a>
         </div>
       </div>
     </div>
 
-   
-
+    <div class="col-sm-4">
+      <div class="card" style="margin-top: 100px;">
+        <img src="/gambar/rendang.jpg" class="card-img-top" alt="Rendang" style="height: 350px;">
+        <div class="card-body">
+          <h5 class="card-title">Rendang</h5>
+          <a href="resepedia.html" class="btn btn-primary">Detail Resep</a>
+        </div>
+      </div>
     </div>
-
+  </div>
 </section>
+
+
+
 
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
